# blueprint

./: .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/skills/release/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude-issue-review.yml  claude.yml  lint-reusable.yml  release.yml  test-matrix.yml  test-reusable.yml
blueprint/: __init__.py  airflow_context.py  builder.py  cli.py  core.py  errors.py  loaders.py  registry.py  template_loader.py  utils.py
docs/: CONTRIBUTING.md
examples/: Dockerfile  README.md  docker-compose.yaml
examples/.astro/templates/: complex_dependencies.py  daily_etl.py  taskflow_api.py
examples/advanced/: README.md
examples/advanced/airflow2/: Dockerfile  Tiltfile  docker-compose.yaml
examples/advanced/airflow3/: Dockerfile  Tiltfile  docker-compose.yaml
examples/advanced/dags/: blueprints.py  dag_args.py  deep_space_survey.dag.yaml  loader.py  programmatic_dags.py  satellite_telemetry.dag.yaml
examples/airflow2/: Dockerfile  Tiltfile  docker-compose.yaml
examples/airflow3/: Dockerfile  Tiltfile  docker-compose.yaml
examples/dags/: customer_etl.dag.yaml  daily_etl.py  etl_blueprints.py  loader.py  multi_source_etl.py  sales_analytics.dag.yaml  simple_pipeline.dag.yaml  templated_etl.dag.yaml
examples/dags/configs/: complex_pipeline.dag.yaml  taskflow_demo.dag.yaml
examples/simple/: README.md
examples/simple/airflow2/: Dockerfile  Tiltfile  docker-compose.yaml
examples/simple/airflow3/: Dockerfile  Tiltfile  docker-compose.yaml
examples/simple/dags/: blueprints.py  loader.py  pipeline.dag.yaml
tests/: test_airflow_context.py  test_builder.py  test_cli.py  test_config.py  test_core.py  test_dag_builder.py  test_errors.py  test_loaders.py  test_registry.py  test_template_loader.py  test_utils.py
tests/integration/: conftest.py  test_cli.py  test_dag_execution.py  test_dag_parsing.py  test_dag_structure.py  test_safe_mode_discovery.py
tests/integration/project/: .gitignore  airflow_settings.yaml
tests/integration/project/.astro/: config.yaml
tests/integration/project/dags/: context_test.dag.yaml  dag_args_test.dag.yaml  explicit_blueprints.py  explicit_naming.dag.yaml  loader.py  params_test.dag.yaml  simple.dag.yaml  test_blueprints.py  versioned.dag.yaml
tests/integration/project/dags/safe_mode_minimal/: blueprints.py  loader.py  probe.safe.yaml
tests/integration/project/tests/dags/: test_dag_integrity.py
